Fixed jumpy bug with What We Do section

--- a/css/main.css
+++ b/css/main.css
@@ -752,7 +752,7 @@ a.navbar-brand {
      background-color: #fff;
      border-color: #cfd2d8;
      border-width: 0 1px 1px;
-     min-height: 225px;
+     min-height: 230px;
      padding: 25px;
 }
 
